Closed Bug 284037 Opened 21 years ago Closed 21 years ago

OOM crash [@ nsCairoBlender::GetAlphas]

Categories

(Core Graveyard :: GFX, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: bastiaan)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

please handle oom :)
Severity: normal → critical
Attached patch fix — — Splinter Review
Assignee: vladimir → b.jacques
Status: NEW → ASSIGNED
Attachment #187724 - Flags: superreview?(roc)
Attachment #187724 - Flags: review?(vladimir)
Attachment #187724 - Flags: superreview?(roc)
Attachment #187724 - Flags: superreview+
Attachment #187724 - Flags: review?(vladimir)
Attachment #187724 - Flags: review+
Attachment #187724 - Flags: approval1.8b3?
Attachment #187724 - Flags: approval1.8b3? → approval1.8b3+
Checked in by timeless (2005-07-07 08:40).
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Crash Signature: [@ nsCairoBlender::GetAlphas]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: