Bug 284037 OOM crash [@ nsCairoBlender::GetAlphas] patch by b.jacques@planet.nl r=roc sr=roc a=asa